--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "@types/react-dom": "^19",
         "eslint": "^9",
         "eslint-config-next": "15.3.3",
+        "sass": "^1.89.1",
         "typescript": "^5"
     }
 }
