--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dependencies": {
         "@supabase/ssr": "^0.6.1",
         "@supabase/supabase-js": "^2.49.9",
+        "@tanstack/react-virtual": "^3.13.9",
         "next": "15.3.3",
         "next-themes": "^0.4.6",
         "react": "^19.0.0",
